# ctf-compass

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: migrate-releases.yml  release-preview.yml  release.yml
desktop/: analyzer.js  ctf2-connector.js  main.js  preload.js  toolkit.js
desktop/renderer/: compact-ui.css  index.html  product-ui.css  renderer.js  sidebar-stable.css  styles.css  web-polyfill.js
docs/: architecture.md  challenge-methods.md  ctf-training-plan-zh.md  public-challenge-benchmarks-2026.md
link-launcher/: README.md  main.js  preload.js
link-launcher/renderer/: index.html  renderer.js  styles.css
plugins/: README.md
scripts/: prune-release.js  smoke-analyzer.js  smoke-desktop.js
src/ctf_compass/: __init__.py  bridge.py  classifier.py  cli.py  guides.py
